--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:R7sn6FPVq/r4kaiFYU/A7OOeQ94q98a/bgJU0YrQ0FQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -63,3 +63,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+API_KEY=RteDOotUSOp181aZHtYi113xpc6nyWvZ
